smaller progress on task_details. preventing an element on contacts.html from producing overflow

--- a/assets/css/board.css
+++ b/assets/css/board.css
@@ -754,6 +754,7 @@ Detail-View related Classes
 
 .details__inner.edit.assigned {
   gap: 8px;
+  margin-bottom: 16px;
 }
 
 .details__description {
